--- a/pergasha.css
+++ b/pergasha.css
@@ -1,5 +1,6 @@
 body{
-    background-color: #93878B; 
+    background-color: white;
+    /* background-color: #93878B;  */
 }
 
 .navbar{
@@ -8,10 +9,6 @@ body{
 
 .navbar-nav .nav-item{
     font-size: 25px;
-}
-
-.class-nav{
-    font-size: 25px !important;
 }
 
 #dreadful-logo{
@@ -39,10 +36,104 @@ body{
 }
 
 .shortcuts:hover{
-    background-color: #77686E;
+    background-color: lightgray;
 }
 
 .shortcuts-icon{
     height: 200px;
     width: 200px;
 }
+
+
+
+.table-header{
+    background-color: #fdf1dc!important;
+}
+
+#class-table-title, .race-table-title{
+    font-size: 1.8rem;
+}
+
+
+
+.class-border{
+   background:#e69a28 ; 
+   padding: 0.2rem;
+}
+
+.class-nav-item{
+    font-size: 20px !important;
+}
+
+#class-selection{
+    padding-left: 40px;
+}
+
+#class-selection li:hover{
+    background-color: gray;
+}
+
+#race-list a:not(.active):hover {
+    background-color: gray;
+}
+
+#feat-list a:not(.active):hover {
+    background-color: gray;
+}
+
+
+.class-feature-title{
+    font-size: 1.5rem;
+    border-bottom: 1px solid black;
+    width: 100%;
+    display: flex;
+    color: #ca1b13;
+}
+
+#prof-box, .class-feature-table, .feat-table{
+    background-color: #fdf1dc ;
+}
+
+#prof-box td, #profBoxName, .class-feature-table td, .race-table td, .feat-box p{
+    padding: 10px;
+}
+
+
+#class-table tbody, .race-table tbody, .feat-box{
+    background-color: #fdf1dc ;
+}
+
+.feat-box{
+    margin-bottom: 20px;
+}
+
+.archetypes{
+    background-color: lightgray;
+    padding-left: 25px;
+}
+
+.class-feature-subtitle{
+    font-size: 1.4rem;
+}
+
+.class-feature-archetype{
+    color: #005acd;
+}
+
+.feat-title{
+    font-size: 1.8rem;
+    border-bottom: 2px solid #ca1b13;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #ca1b13;
+}
+
+.feat-prerequisites{
+    font-size: 1rem!important;
+    color: black!important;
+    font-style: italic;
+}
+
+
+
