--- a/pergasha.css
+++ b/pergasha.css
@@ -47,14 +47,14 @@ body{
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 769px) {
-    #trained-abilities, #race-tabDesc, #feat-display-section, #psionics-display-section, #items-display-section{
+    #trained-abilities, #race-tabDesc, #feat-display-section, #items-display-section{
         flex-basis: auto;
     }
     
-    #training-info, #race-list-container, #feat-list, #psionics-list, #items-list{
+    #training-info, #race-list-container, #feat-list, #items-list{
         max-width: 100%!important;
     }
-    #race-list-container, #feat-list, #psionics-list, #items-list{
+    #race-list-container, #feat-list, #items-list{
         text-align: center;
         font-size: 1.5rem;
         position: static;
@@ -85,16 +85,16 @@ body{
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) { 
 
-    .class-left-container, .class-right-container,#items-list, #items-display-section {
+    .class-left-container, .class-right-container,#items-list, #items-display-section, #psionics-display-section {
         flex-basis: 100%;
     }
 
-    .item-table, #property-list, #items-display-section, #description-list{
+    .item-table, #property-list, #items-display-section, #description-list, #psionics-list, .psionics-box, #psionics-table{
         width: 100%!important;
         max-width: 100%!important;
     }
 
-    #items-list{
+    #items-list, #psionics-list{
         text-align: center;
         font-size: 1.5rem;
         position: static;
@@ -334,10 +334,6 @@ body{
 }
 
 
-#items-display-section{
-    max-width: 75%;
-}
-
 .side-table{
     border-right:1px solid #e69a28;
     border-left:1px solid #e69a28;
@@ -346,4 +342,24 @@ body{
 
 .side-table td:empty::after{
     content: "\00a0";
+  }
+
+  #myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 2px; /* Place the button at the bottom of the page */
+    right: 2px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: grey; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 8px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 25px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
   }
