--- a/pergasha.css
+++ b/pergasha.css
@@ -363,3 +363,7 @@ body{
   #myBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
   }
+
+  #testrules{
+      position: relative;
+  }
