--- a/pergasha.css
+++ b/pergasha.css
@@ -368,46 +368,59 @@ body{
       position: relative;
   }
 
+
+  #filters .btn{
+      box-shadow: none!important;
+  }
+
   /* Flipping cards */
 
-  #npc-container .card{
+  #cards-container .flip-card{
       min-width: 250px;
   }
 
-.card {
-    margin: 10px 10px;
+   /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+    background-color: transparent;
+    width: 310px;
+    height: 450px;
+    /* border: 1px solid #f1f1f1; */
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
-  /* Flip Cards CSS */
-  .card-container {
-    display: grid;
-    perspective: 700px;
-  }
-  
-  .card-flip {
-    display: grid;
-    grid-template: 1fr / 1fr;
-    grid-template-areas: "frontAndBack";
-    transform-style: preserve-3d;
-    transition: all 0.7s ease;
-  }
-  
-  .card-flip div {
-    backface-visibility: hidden;
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
     transform-style: preserve-3d;
   }
   
-  .front {
-    grid-area: frontAndBack;
-  }
-  
-  .back {
-    grid-area: frontAndBack;
-    transform: rotateY(-180deg);
-  }
-  
-  .card-container:hover .card-flip {
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
   }
   
-  /* Flipping cards */
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    /* background-color: #bbb; */
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color:#bbb;
+    /* color: white; */
+    transform: rotateY(180deg);
+  } 
