--- a/pergasha.css
+++ b/pergasha.css
@@ -121,7 +121,7 @@ body{
         position: static;
     }
 
-    .item-table, #property-list, #items-display-section, #description-list, #psionics-list, .psionics-box, #psionics-table{
+    .item-table, #property-list, #items-display-section, #description-list, #psionics-list, .psionics-box, .infusion-box, #psionics-table{
         width: 100%!important;
         max-width: 100%!important;
     }
@@ -249,11 +249,11 @@ body{
     background-color: #fdf1dc ;
 }
 
-#prof-box td, #profBoxName, #class-feature-table td, .race-table td, .feat-box p, #training-base td, .psionics-body{
+#prof-box td, #profBoxName, #class-feature-table td, .race-table td, .feat-box p, #training-base td, .psionics-body, .infusions-body{
     padding: 10px;
 }
 
-#class-table tbody, .race-table tbody, .feat-box, #training-base, #psionics-table tbody, .psionics-box, #items-display-section tbody{
+#class-table tbody, .race-table tbody, .feat-box, #training-base, #psionics-table tbody, .psionics-box, .infusion-box, #items-display-section tbody{
     background-color: #fdf1dc ;
 }
 
@@ -272,7 +272,7 @@ body{
     max-width: 500px;
 }
 
-.class-feature-subtitle, .psionics-subtitle{
+.class-feature-subtitle, .psionics-subtitle, .infusions-subtitle{
     font-size: 1.4rem;
 }
 
@@ -309,11 +309,11 @@ body{
     min-width: 350px;
 }
 
-.feat-box, .psionics-box{
+.feat-box, .psionics-box, .infusion-box{
     margin-bottom: 20px;
 }
 
-.feat-box ul, .psionics-box ul{
+.feat-box ul, .psionics-box ul,  .infusion-box ul{
     padding-bottom:  15px;
     padding-right: 20px;
 }
@@ -363,7 +363,7 @@ body{
 }
 
 #trained-abilities li:not(.internal-list):nth-of-type(2n), #trained-abilities ul div:nth-of-type(2n+1),
-#property-list li:not(.internal-list):nth-of-type(2n), #property-list ul div:nth-of-type(2n+1), #description-list li:not(.internal-list):nth-of-type(2n), #description-list ul div:nth-of-type(2n+1), .infusion-powers li:not(.internal-list):nth-of-type(2n), .infusion-powers ul div:nth-of-type(2n+1){
+#property-list li:not(.internal-list):nth-of-type(2n), #property-list ul div:nth-of-type(2n+1), #description-list li:not(.internal-list):nth-of-type(2n), #description-list ul div:nth-of-type(2n+1){
     background-color: rgba(0,0,0,.05);
 }
 
@@ -389,10 +389,10 @@ body{
     color: black!important;
 }
 
-.psionics-title:hover{
+.psionics-title:hover, .infusions-title:hover{
     background-color: rgba(0,0,0,.05);
 }
-.psionics-title{
+.psionics-title, .infusions-title{
     font-size: 1.8rem;
     width: 100%;
     display: flex;
